force-app/main/default/objects/Study_Fee_Matrix_Item__c/Study_Fee_Matrix_Item__c.object-meta.xml
<CustomObject>
    <description>The list of items to be billed.</description>
    <label>Study Fee Matrix Item</label>
    <nameField>
        <displayFormat>SMI-{00000}</displayFormat>
        <label>Study Fee Matrix #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Fee Matrix Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>