force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Applicable_for_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Applicable_for_Attempt_Number__c</fullName>
    <description>The applicable attempt numbers in semi-colon separated value e.g., 1;2;3. This is used to match the Individual Enrollment&apos;s Attempt Number.</description>
    <inlineHelpText>The applicable attempt numbers in semi-colon separated value e.g., 1;2;3. This is used to match the Individual Enrollment&apos;s Attempt Number.</inlineHelpText>
    <label>Applicable for Attempt Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>