force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Applicable_For_Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For_Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The applicable study unit.</description>
    <inlineHelpText>The applicable study unit.</inlineHelpText>
    <label>Applicable For Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Applicable For Study Fee Matrix Items</relationshipLabel>
    <relationshipName>Applicable_For_Study_Fee_Matrix_Items</relationshipName>
    <type>Lookup</type>
</CustomField>