force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Applicable_For_Term__c.field-meta.xml
<CustomField>
    <fullName>Applicable_For_Term__c</fullName>
    <description>The applicable term numbers in semi-colon separated value e.g., 1;2;3. This is used to match the Individual Pathway&apos;s Term #.</description>
    <inlineHelpText>The applicable term numbers in semi-colon separated value e.g., 1;2;3. This is used to match the Individual Pathway&apos;s Term #.</inlineHelpText>
    <label>Applicable For Term #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>