force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Study_Fee__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Fee</label>
    <referenceTo>Study_Fee__c</referenceTo>
    <relationshipLabel>Study Fee Matrix Items</relationshipLabel>
    <relationshipName>Study_Fee_Matrix_Items</relationshipName>
    <type>Lookup</type>
</CustomField>