force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Study_Fee_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee_Matrix__c</fullName>
    <label>Study Fee Matrix</label>
    <referenceTo>Study_Fee_Matrix__c</referenceTo>
    <relationshipLabel>Study Fee Matrix Items</relationshipLabel>
    <relationshipName>Study_Fee_Matrix_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>