force-app/main/default/objects/Study_Fee_Matrix_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Credit</fullName>
                <default>true</default>
                <label>Per Credit</label>
            </value>
            <value>
                <fullName>Per Study Unit</fullName>
            </value>
            <value>
                <fullName>Per Academic Term</fullName>
            </value>
            <value>
                <fullName>Per Academic Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>